--- a/app/views/sounds/_embed_sound.html.haml
+++ b/app/views/sounds/_embed_sound.html.haml
@@ -1,1 +1,1 @@
-%a{:href="http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(soundwalk, sound)}.wav"} #{soundwalk_sound_url(soundwalk, sound)}.wav 
+%a{:href => "#{soundwalk_sound_url(soundwalk, sound)}.wav"} #{soundwalk_sound_url(soundwalk, sound)}.wav 
