--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -1,4 +1,4 @@
-- form_for(:contact, :url => contact_path) do |form|
+- form_for(:study, :url => study_path) do |form|
 	%p
 		= form.label :subject
 		%br
