--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -1,7 +1,15 @@
 - form_for(:study, :url => sendstudy_path) do |form|
-	- for i in 0..20
+	- @sounds.each do |sound|
 		%p
-			= form.label "tags_#{i}"
-			= form.text_field "tags[#{i}]"
+			%object{:type=>"audio/x-wav", :data=>"#{soundwalk_sound_path(sound.soundwalk, sound)}.wav", :width=>"200", :height=>"20"}
+		  		%param{:name=>"src", :value="#{soundwalk_sound_path(sound.soundwalk, sound)}.wav"}
+		  		%param{:name=>"autoplay", :value=>"false"}
+		  		%param{:name=>"autoStart", :value=>"0"}
+		  		alt : 
+				%a{:href=>"#{soundwalk_sound_path(sound.soundwalk, sound)}.wav"} "#{soundwalk_sound_path(sound.soundwalk, sound)}.wav"
+			
+			= form.label "tags[#{sound.id}]"
+			= form.text_field "tags[#{sound.id}]"
+			%input{:type => 'hidden', :name => "names[#{sound.id}]", :value => sound.filename}
 	%p
 		= form.submit "Send"
