--- a/app/views/study/study.erb
+++ b/app/views/study/study.erb
@@ -1,3 +1,3 @@
-<%= @name %> wrote you an email:
-
-<%= @message %>
+<%= for i = 0...@names.size %>
+	<%= @names[i] %>,<%= @tags[i].split(",").collect({|a| a.chomp}).join(',') %>
+	
