--- a/app/views/study/study.erb
+++ b/app/views/study/study.erb
@@ -1,3 +1,6 @@
+<% output = "" %>
 <% for i in 0...@names.size %>
-	<%= @names[i] %>,<%= @tags[i] %>
+	<% output += "#{@names[i]},#{@tags[i]}\n"%>
 <% end %>
+
+<%= output %>
