--- a/app/views/study/study.erb
+++ b/app/views/study/study.erb
@@ -1,5 +1,1 @@
-<% output = "" %>
-<% for i in 0...@names.size %>
-	<% output += "#{@names[i]},#{@tags[i]}\n"%>
-<% end %>
-<%= output %>
+<%= @body_text %>
