--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -1,3 +1,22 @@
+%p
+	Thank you for participating in our study! Your help is invaluable toward assisting us in making new interactive web mapping tools.
+	
+%p
+	For each of the following sounds, please press the play button next to each sound and then provide some descriptive tags that describe what you hear. Separate multiple tags with commas.
+	%br
+	For example: &quot;frog,ribbit,creature,pond,water&quot;
+	%br
+	When you are done, simply click the &quot;Send&quot; button.
+
+%p
+	If you have any problems, please contact study@soundwalks.org, and we will get back to you as soon as possible.
+
+- if flash[:notice]
+	%p.notice= flash[:notice]
+	
+- if flash[:error]
+	%p.error= flash[:error]
+
 - form_for(:study, :url => sendstudy_path) do |form|
 	- @sounds.each do |sound|
 		%p
