--- a/app/views/meta/_current_user.html.haml
+++ b/app/views/meta/_current_user.html.haml
@@ -1,4 +1,4 @@
-- if logged_in? && current_user.id
+- if logged_in? && current_user.id && !current_user.nil?
 	%meta{:name => 'current_user_id', :content => current_user.id}
 	%meta{:name => 'current_user_login', :content => current_user.login}
 	%meta{:name => 'current_user_name', :content => current_user.name}
