--- a/app/views/layouts/site.html.haml
+++ b/app/views/layouts/site.html.haml
@@ -22,7 +22,7 @@
 				%a{:title => 'Soundwalks', :href => '/'}
 					%img{:src => '/images/soundwalks.png', :alt => 'Soundwalks'}
 			%div#user-panel
-				- if logged_in?
+				- if logged_in? && current_user.id && !current_user.nil?
 					= avatar_tag(current_user, :size => 25, :alt => current_user.name)
 					Hi, #{first_name current_user, :force_third_person => true}! &nbsp;&nbsp;
 					%a{:title => 'Settings', :href => '/settings'} Settings
@@ -35,7 +35,7 @@
 			%div.clear		
 		%div#body
 			%div#menu
-				- if logged_in?
+				- if logged_in? && current_user.id && !current_user.nil?
 					- if @current_user.can_upload
 						#{link_to 'New soundwalk', new_soundwalk_path} &#124;
 						
