--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -1,17 +1,13 @@
 %p
-	Thank you for participating in our study! Your help is invaluable toward assisting us in making new interactive web mapping tools.
+	Thank you for participating in our study! Your help is invaluable, as it helps us develop new methods for mapping and synthesizing acoustic environments. 
 	
 %p
-	For each of the following sounds, please press the play button next to each sound and then provide some descriptive tags that describe what you hear. Separate multiple tags with commas.
+	For each of the following sounds, please press the play button next to each sound and then provide some descriptive tags that describe what you hear. Separate multiple tags with commas. For example: &quot;frog,ribbit,creature,pond,water&quot; might be appropriate tags for a sound of a frog croaking near a lake.
 
 %p
-	For example: &quot;frog,ribbit,creature,pond,water&quot;
-
-%p
-	When you are done, simply click the &quot;Send&quot; button.
-
-%p
-	If you have any problems, please contact study@soundwalks.org, and we will get back to you as soon as possible.
+	When you are done, simply click the &quot;Send&quot; button. If you have any problems, please contact 
+	%a{:href=>"mailto:study@soundwalks.org"}study@soundwalks.org
+	and we will get back to you as soon as possible.
 
 - if flash[:notice]
 	%p.notice= flash[:notice]
