--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -18,7 +18,7 @@
 %div{:style => 'text-align: center'}
 	- form_for(:study, :url => sendstudy_path) do |form|
 		- @sounds.each do |sound|
-			%p
+			%p{:style=>'text-align:center'}
 				%object{:type=>"audio/x-wav", :data=>"#{soundwalk_sound_path(sound.soundwalk, sound)}.wav", :width=>"200", :height=>"20"}
 					%param{:name=>"src", :value=>"#{soundwalk_sound_path(sound.soundwalk, sound)}.wav"}
 					%param{:name=>"autoplay", :value=>"false"}
@@ -27,5 +27,5 @@
 					%a{:href=>"#{soundwalk_sound_path(sound.soundwalk, sound)}.wav"} "#{soundwalk_sound_path(sound.soundwalk, sound)}.wav"
 				%input{:type => 'text', :name => "tags[]"}
 				%input{:type => 'hidden', :name => "ids[]", :value => sound.id}
-		%p
+		%p{:style=>'text-align:center'}
 			= form.submit "Send"
