--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -1,6 +1,3 @@
-- content_for :head do 
-	%script{:type => "text/javascript", :src => "http://mediaplayer.yahoo.com/js"}
-
 %p
 	Thank you for participating in our study! Your help is invaluable, as it assists us in developing new methods for mapping and synthesizing acoustic environments. 
 	
@@ -22,8 +19,10 @@
 	- form_for(:study, :url => sendstudy_path) do |form|
 		- @sounds.each do |sound|
 			%p{:style=>'text-align:center'}
-				%a{:href=>"#{soundwalk_sound_path(sound.soundwalk, sound)}.wav"} "#{sound.filename}"
+				%a{:href=>"#{soundwalk_sound_path(sound.soundwalk, sound)}.wav"} #{sound.filename}
 				%input{:type => 'text', :name => "tags[]", :style=>'width: 30em'}
 				%input{:type => 'hidden', :name => "ids[]", :value => sound.id}
 		%p{:style=>'text-align:center'}
 			= form.submit "Send"
+
+%script{:type => "text/javascript", :src => "http://mediaplayer.yahoo.com/js"}
