--- a/app/views/sounds/_embed_sound.html.haml
+++ b/app/views/sounds/_embed_sound.html.haml
@@ -1,10 +1,1 @@
-%embed{
-	:type => "application/x-shockwave-flash", 
-	:src => "http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(soundwalk, sound)}.mp3",
-	:width => "100%",
-	:height => "27",
-	:allowscriptaccess => "never",
-	:quality => "best",
-	:bgcolor => "#ffffff",
-	:wmode => "window",
-	:flashvars => "playerMode=embedded"}
+%embed{:type => "application/x-shockwave-flash", :src => "http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(soundwalk, sound)}.mp3", :width => "100%", :height => "27", :allowscriptaccess => "never", :quality => "best", :bgcolor => "#ffffff", :wmode => "window", :flashvars => "playerMode=embedded"}
