--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -1,3 +1,6 @@
+- content_for :title do
+	Sound Tagging Study
+	
 %p
 	Thank you for participating in our study! Your help is invaluable, as it assists us in developing new methods for mapping and synthesizing acoustic environments. 
 	
