--- a/public/stylesheets/sass/_containers.sass
+++ b/public/stylesheets/sass/_containers.sass
@@ -10,8 +10,9 @@
 	#title-picture
 		display: table-cell
 		text-align: left
+		vertical-align: bottom
 		img
-			margin-bottom: -9px
+			vertical-align: bottom
 		
 	#user-panel
 		display: table-cell
@@ -19,6 +20,7 @@
 		margin: 0
 		padding: 0
 		text-align: right
+		vertical-align: bottom
 		
 		img
 			vertical-align: middle
