--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -19,13 +19,19 @@
 		%a{:href=>"mailto:study@soundwalks.org"}study@soundwalks.org
 		and we will get back to you as soon as possible.
 	
-	%div{:style => 'text-align: center'}
-		- form_for(:study, :url => sendstudy_path) do |form|
+	- form_for(:study, :url => sendstudy_path) do |form|
+		%table{:style => 'width: 100%'}
 			- @sounds.each do |sound|
-				%p{:style=>'text-align:center'}
-					%embed{:type => "application/x-shockwave-flash", :src => "http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3", :width => "45%", :height => "27", :allowscriptaccess => "never", :quality => "best", :bgcolor => "#ffffff", :wmode => "window", :flashvars => "playerMode=embedded"}
-					%input{:type => 'text', :name => "tags[]", :style=>'width: 45%'}
-					%input{:type => 'hidden', :name => "ids[]", :value => sound.id}
-			%p{:style=>'text-align:center'}
-				= form.submit "Send"
+				%tr
+					%td{:style=>'width: 10%'}
+						%a{:href => "#{soundwalk_sound_url(sound.soundwalk, sound)}.wav"} #{sound.filename}
+						
+					%td{:style=>'width: 33%'}
+						%embed{:type => "application/x-shockwave-flash", :src => "http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3", :width => "100%", :height => "27", :allowscriptaccess => "never", :quality => "best", :bgcolor => "#ffffff", :wmode => "window", :flashvars => "playerMode=embedded"}
+						
+					%td
+						%input{:type => 'text', :name => "tags[]", :style=>'width: 100%'}
+						%input{:type => 'hidden', :name => "ids[]", :value => sound.id}
+		%p{:style=>'text-align:center'}
+			= form.submit "Send"
 
