--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -12,7 +12,7 @@
 		Thank you for participating in our study! Your help is invaluable, as it assists us in developing new methods for mapping and synthesizing acoustic environments. 
 	
 	%p
-		This study should take approximately 5 minutes. For each of the following sounds, please press the play button next to each sound and then provide some descriptive tags that describe what you hear. Separate multiple tags with commas. For example, &quot;frog, ribbit, creature, pond, water&quot; might be appropriate tags for a sound of a frog croaking near a lake.
+		This study should take approximately 5 minutes. For each of the following sounds, please press the play button next to each sound and then provide some descriptive tags that describe what you hear. Separate multiple tags with commas. For example, &quot;frog, ribbit, creature, pond, water&quot; might be appropriate tags for a sound of a frog croaking near a lake. If the embedded audio player does not work, please click the filename next to each line to download the sound and listen to it.
 
 	%p
 		When you are done, simply click the &quot;Send&quot; button. If you have any problems, please contact 
