--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -27,7 +27,7 @@
 					- @sounds.each do |sound|
 						%tr
 							%td{:style=>'width: 10%'}
-								%a{:href => "#{soundwalk_sound_url(sound.soundwalk, sound)}.wav"} #{sound.filename}
+								%a{:href => "#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3"} #{sound.filename}
 						
 							%td{:style=>'width: 33%'}
 								%embed{:type => "application/x-shockwave-flash", :src => "http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3", :width => "100%", :height => "27", :allowscriptaccess => "never", :quality => "best", :bgcolor => "#ffffff", :wmode => "window", :flashvars => "playerMode=embedded"}
