--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -11,6 +11,8 @@
 			- if flash[:notice]
 				%p{:style => 'color:#00A000'}
 					= flash[:notice]
+			%p{:style => 'text-align: center'}
+				%img{:src => 'images/soundwalks-big.png'}
 			%p
 				Thank you for participating in our study! Your help is invaluable, as it assists us in developing new methods for mapping and synthesizing acoustic environments. We are working on an exciting new web application that will actually let you <em>listen</em> to maps--think Google Street View, but for sounds.
 	
