--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -35,7 +35,7 @@
 							%object{:codebase=>"http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0", :height="27", :width=>"100%", :align=>"middle", :classid=>"clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"}
 								%param{:name=>"_cx", :value=>"10583"}
 								%param{:name=>"_cy", :value=>"714"}
-								%param{:name=>"FlashVars," :value=""}
+								%param{:name=>"FlashVars," :value=>""}
 								%param{:name=>"Movie", :value=>"http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3"}
 								%param{:name=>"Src", :value=>"http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3"}
 								%param{:name=>"WMode", :value=>"Window"}
