--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -44,7 +44,7 @@
 								%param{:name=>"Quality", :value=>"High"}
 								%param{:name=>"SAlign", :value=>"LT"}
 								%param{:name=>"Menu", :value=>"-1"}
-								%param{:name=>"Base", :value=""}
+								%param{:name=>"Base", :value=>""}
 								%param{:name=>"AllowScriptAccess", :value=>"never"}
 								%param{:name=>"Scale", :value=>"NoScale"}
 								%param{:name=>"DeviceFont", :value=>"0"}
