--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -32,7 +32,7 @@
 								%a{:href => "#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3"} #{sound.filename}
 						
 							%td{:style=>'width: 33%'}
-							%object{:codebase=>"http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0", :height="27", :width=>"100%", :align=>"middle", :classid=>"clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"}
+							%object{:codebase=>"http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0", :height=>"27", :width=>"100%", :align=>"middle", :classid=>"clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"}
 								%param{:name=>"_cx", :value=>"10583"}
 								%param{:name=>"_cy", :value=>"714"}
 								%param{:name=>"FlashVars," :value=>""}
