--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -51,7 +51,7 @@
 								%param{:name=>"EmbedMovie", :value=>"0"}
 								%param{:name=>"BGColor", :value=>""}
 								%param{:name=>"SWRemote", :value=>""}
-								%param{:name=>"MovieData", :value=""}
+								%param{:name=>"MovieData", :value=>""}
 								%param{:name=>"SeamlessTabbing", :value=>"1"}
 								%param{:name=>"Profile", :value=>"0"}
 								%param{:name=>"ProfileAddress", :value=>""}
