--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -6,64 +6,65 @@
 			Sound Tagging Study
 
 	%body
-		%div{:style => 'margin: 0 auto 0; width: 60em'}
-			- if flash[:error]
-				%p{:style => 'color:#A00000'}
-					= flash[:error]
-			- if flash[:notice]
-				%p{:style => 'color:#00A000'}
-					= flash[:notice]
-			%p{:style => 'text-align: center'}
-				%img{:src => 'images/soundwalks-big.png'}
-			%p
-				Thank you for participating in our study! Your help is invaluable, as it assists us in developing new methods for mapping and synthesizing acoustic environments. We are working on an exciting new web application that will actually let you <em>listen</em> to maps--think Google Street View, but for sounds.
+		%div#body
+			%div#content
+				- if flash[:error]
+					%p{:style => 'color:#A00000'}
+						= flash[:error]
+				- if flash[:notice]
+					%p{:style => 'color:#00A000'}
+						= flash[:notice]
+				%p{:style => 'text-align: center'}
+					%img{:src => 'images/soundwalks-big.png'}
+				%p
+					Thank you for participating in our study! Your help is invaluable, as it assists us in developing new methods for mapping and synthesizing acoustic environments. We are working on an exciting new web application that will actually let you <em>listen</em> to maps--think Google Street View, but for sounds.
 	
-			%p
-				This study should take approximately <em>5 minutes</em>. For each of the following sounds, please press the play button next to each sound and then provide some <em>single-word</em> descriptive tags that describe what you hear. Separate multiple tags with commas. For example, &quot;frog, ribbit, creature, pond, water&quot; might be appropriate tags for a sound of a frog croaking near a lake. If the embedded audio player does not work, please click the filename next to each line to download the sound and listen to it.
+				%p
+					This study should take approximately <em>5 minutes</em>. For each of the following sounds, please press the play button next to each sound and then provide some <em>single-word</em> descriptive tags that describe what you hear. Separate multiple tags with commas. For example, &quot;frog, ribbit, creature, pond, water&quot; might be appropriate tags for a sound of a frog croaking near a lake. If the embedded audio player does not work, please click the filename next to each line to download the sound and listen to it.
 
-			%p
-				When you are done, simply click the <em>&quot;Send&quot; button</em>. If you have any problems, please contact 
-				%a{:href=>"mailto:study@soundwalks.org"}study@soundwalks.org
-				and we will get back to you as soon as possible.
+				%p
+					When you are done, simply click the <em>&quot;Send&quot; button</em>. If you have any problems, please contact 
+					%a{:href=>"mailto:study@soundwalks.org"}study@soundwalks.org
+					and we will get back to you as soon as possible.
 	
-			- form_for(:study, :url => sendstudy_path) do |form|
-				%table{:style => 'width: 100%'}
-					- @sounds.each do |sound|
-						%tr
-							%td{:style=>'width: 10%'}
-								%a{:href => "#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3"} #{sound.filename}
+				- form_for(:study, :url => sendstudy_path) do |form|
+					%table{:style => 'width: 100%'}
+						- @sounds.each do |sound|
+							%tr
+								%td{:style=>'width: 10%'}
+									%a{:href => "#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3"} #{sound.filename}
 						
-							%td{:style=>'width: 33%'}
-								%object{:codebase=>"http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0", :height=>"27", :width=>"100%", :align=>"middle", :classid=>"clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"}
-									%param{:name=>"_cx", :value=>"10583"}
-									%param{:name=>"_cy", :value=>"714"}
-									%param{:name=>"FlashVars," :value=>""}
-									%param{:name=>"Movie", :value=>"http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3"}
-									%param{:name=>"Src", :value=>"http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3"}
-									%param{:name=>"WMode", :value=>"Window"}
-									%param{:name=>"Play", :value=>"0"}
-									%param{:name=>"Loop", :value=>"-1"}
-									%param{:name=>"Quality", :value=>"High"}
-									%param{:name=>"SAlign", :value=>"LT"}
-									%param{:name=>"Menu", :value=>"-1"}
-									%param{:name=>"Base", :value=>""}
-									%param{:name=>"AllowScriptAccess", :value=>"never"}
-									%param{:name=>"Scale", :value=>"NoScale"}
-									%param{:name=>"DeviceFont", :value=>"0"}
-									%param{:name=>"EmbedMovie", :value=>"0"}
-									%param{:name=>"BGColor", :value=>""}
-									%param{:name=>"SWRemote", :value=>""}
-									%param{:name=>"MovieData", :value=>""}
-									%param{:name=>"SeamlessTabbing", :value=>"1"}
-									%param{:name=>"Profile", :value=>"0"}
-									%param{:name=>"ProfileAddress", :value=>""}
-									%param{:name=>"ProfilePort", :value=>"0"}
-									%param{:name=>"AllowNetworking", :value=>"all"}
-									%param{:name=>"AllowFullScreen", :value=>"false"}
-									%embed{:type=>"application/x-shockwave-flash", :src=>"http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3", :allowscriptaccess=>"never", :quality=>"best", :bgcolor=>"#ffffff", :wmode=>"window", :flashvars=>"playerMode=embedded", :pluginspage=>"http://www.macromedia.com/go/getflashplayer", :height=>"27", :width=>"400"}
-							%td
-								%input{:type => 'text', :name => "tags[]", :style=>'width: 100%'}
-								%input{:type => 'hidden', :name => "ids[]", :value => sound.id}
-				%p{:style=>'text-align:center'}
-					= form.submit "Send"
+								%td{:style=>'width: 33%'}
+									%object{:codebase=>"http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0", :height=>"27", :width=>"100%", :align=>"middle", :classid=>"clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"}
+										%param{:name=>"_cx", :value=>"10583"}
+										%param{:name=>"_cy", :value=>"714"}
+										%param{:name=>"FlashVars," :value=>""}
+										%param{:name=>"Movie", :value=>"http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3"}
+										%param{:name=>"Src", :value=>"http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3"}
+										%param{:name=>"WMode", :value=>"Window"}
+										%param{:name=>"Play", :value=>"0"}
+										%param{:name=>"Loop", :value=>"-1"}
+										%param{:name=>"Quality", :value=>"High"}
+										%param{:name=>"SAlign", :value=>"LT"}
+										%param{:name=>"Menu", :value=>"-1"}
+										%param{:name=>"Base", :value=>""}
+										%param{:name=>"AllowScriptAccess", :value=>"never"}
+										%param{:name=>"Scale", :value=>"NoScale"}
+										%param{:name=>"DeviceFont", :value=>"0"}
+										%param{:name=>"EmbedMovie", :value=>"0"}
+										%param{:name=>"BGColor", :value=>""}
+										%param{:name=>"SWRemote", :value=>""}
+										%param{:name=>"MovieData", :value=>""}
+										%param{:name=>"SeamlessTabbing", :value=>"1"}
+										%param{:name=>"Profile", :value=>"0"}
+										%param{:name=>"ProfileAddress", :value=>""}
+										%param{:name=>"ProfilePort", :value=>"0"}
+										%param{:name=>"AllowNetworking", :value=>"all"}
+										%param{:name=>"AllowFullScreen", :value=>"false"}
+										%embed{:type=>"application/x-shockwave-flash", :src=>"http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3", :allowscriptaccess=>"never", :quality=>"best", :bgcolor=>"#ffffff", :wmode=>"window", :flashvars=>"playerMode=embedded", :pluginspage=>"http://www.macromedia.com/go/getflashplayer", :height=>"27", :width=>"400"}
+								%td
+									%input{:type => 'text', :name => "tags[]", :style=>'width: 100%'}
+									%input{:type => 'hidden', :name => "ids[]", :value => sound.id}
+					%p{:style=>'text-align:center'}
+						= form.submit "Send"
 
