--- a/public/stylesheets/sass/_containers.sass
+++ b/public/stylesheets/sass/_containers.sass
@@ -38,7 +38,7 @@
 
 #body
 	width = !big_width
-	margin: 0 auto 0 auto
+	margin: 0 auto 0
 	padding: 0
 	border = "1px solid " + !light_blue
 	background-color: white
