--- a/app/views/study/index.html.haml
+++ b/app/views/study/index.html.haml
@@ -34,7 +34,7 @@
 								%td{:style=>'width: 10%'}
 									%a{:href => "#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3"} #{sound.filename}
 						
-								%td{:style=>'width: 20%'}
+								%td{:style=>'width: 30%'}
 									%object{:codebase=>"http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0", :height=>"27", :width=>"100%", :align=>"middle", :classid=>"clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"}
 										%param{:name=>"_cx", :value=>"10583"}
 										%param{:name=>"_cy", :value=>"714"}
@@ -62,7 +62,7 @@
 										%param{:name=>"AllowNetworking", :value=>"all"}
 										%param{:name=>"AllowFullScreen", :value=>"false"}
 										%embed{:type=>"application/x-shockwave-flash", :src=>"http://www.google.com/reader/ui/3247397568-audio-player.swf?audioUrl=#{soundwalk_sound_url(sound.soundwalk, sound)}.mp3", :allowscriptaccess=>"never", :quality=>"best", :bgcolor=>"#ffffff", :wmode=>"window", :flashvars=>"playerMode=embedded", :pluginspage=>"http://www.macromedia.com/go/getflashplayer", :height=>"27", :width=>"400"}
-								%td
+								%td{:style=>"width: 60%"}
 									%input{:type => 'text', :name => "tags[]", :style=>'width: 100%'}
 									%input{:type => 'hidden', :name => "ids[]", :value => sound.id}
 					%p{:style=>'text-align:center'}
