--- a/public/stylesheets/sass/_main.sass
+++ b/public/stylesheets/sass/_main.sass
@@ -4,6 +4,7 @@ body
 	font-family = !fonts_normal
 	background-color = !tan
 	font-size: 1em
+	text-align: center
 
 strong, em, b, i
 	font-family = !fonts_styled
