--- a/app/views/users/followers.html.haml
+++ b/app/views/users/followers.html.haml
@@ -10,4 +10,4 @@
 	%h2 #{first_name @user, {:capitalize => true}} #{first_name_verb @user} followed by #{pluralize(@user.inverse_friendships.size, 'person')}.
 	= render :partial => 'user_list', :locals => {:user => @user, :users => @user.inverse_friends}
 - else
-	%h2 #{first_name @user} #{first_name_verb_negative @user} followed by anyone.
+	%h2 #{first_name @user, {:capitalize => true}} #{first_name_verb_negative @user} followed by anyone.
