--- a/public/stylesheets/sass/_variables.sass
+++ b/public/stylesheets/sass/_variables.sass
@@ -8,6 +8,7 @@
 !very_light_green = !green / 2 + #99ffbc
 
 !dark_blue = #223241
+!blue = !dark_blue / 2 + #999999
 !light_blue = #a3bfbf
 !very_light_blue = !light_blue / 2 + #999999
 
@@ -15,7 +16,7 @@
 !gray = #888888
 !light_gray = #efefef
 !dark_gray = !gray / 2
-
+!very_light_gray = #f8f8f8
 // Fonts.
 !fonts_normal = "Lucida Sans Unicode", "Lucida Grande", "Verdana", "Arial", "Helvetica", "sans-serif"
 !fonts_styled = "Lucida Sans", "Lucida Sans Unicode", "Lucida Grande", "Verdana", "Arial", "Helvetica", "sans-serif"
