--- a/public/stylesheets/sass/_forms.sass
+++ b/public/stylesheets/sass/_forms.sass
@@ -65,6 +65,15 @@ input
 		padding: 0.25em
 		height: 2.5em
 		border = "1px dashed " + !gray
+			
+	&.button-disabled
+		+rounded_border
+		width: 7.5em
+		margin: 0.5em
+		padding: 0.25em
+		height: 2.5em
+		border = "1px dashed " + !gray
+		color = !gray
 		
 	&.small-button
 		font-size: 0.8em
