--- a/public/stylesheets/sass/_uploadify.sass
+++ b/public/stylesheets/sass/_uploadify.sass
@@ -2,97 +2,107 @@
 
 form
 	#uploader
-		padding: 0
-		margin-top: 1em
 		text-align: center
+		margin-top: 1em
+		padding: 0
 		
 		#file-uploader-container
+			vertical-align: middle
 			display: inline-block
 			position: relative
-			vertical-align: middle
 			width: 200px
 			height: 80px
-		
+			
 			#file-uploaderUploader
 				background: transparent
 				position: absolute
+				z-index: 2
 				left: 0
 				top: 0
-				z-index: 2
-			
+				
 			#browse-button
-				font-size: 1.5em
-				z-index: 1
 				position: absolute
+				font-size: 1.5em
+				height: 100%
+				width: 100%
+				z-index: 1
 				margin: 0
 				left: 0
 				top: 0 
-				width: 100%
-				height: 100%
 				
 		#upload-status
-			padding-top: 1em
-			padding-left: 1em
-			font-size: 0.8em
 			vertical-align: middle
+			text-align: right
+			padding-left: 1em
+			padding-top: 1em
+			font-size: 0.8em
 			
 .fileUploadQueue
-	padding: 0
-	width: 31em
+	border = !dashed_border
+	font-size: 0.8em
+	background: transparent
+	position: relative
+	padding: 0.5em
+	margin-top: 1em
+	width: 38em
+	z-index: 2
+
+=queue_item
+	border-bottom = "1px solid " + !blue
+	position: relative
+	font-size: 1em
+	height: 2.25em
+	width: 100%
+	z-index: 3
+	
+	.cancel
+		line-height: 100%
+		position: absolute
+		top: 0
+		left: 19em
+		width: 18em
+		height: 1.25em
+		padding: 0.5em
+		vertical-align: middle
+		text-align: right
+		z-index: 5
+	
+	.filename
+		line-height: 100%
+		position: absolute
+		top: 0
+		left: 0
+		width: 18em
+		height: 1.25em
+		padding: 0.5em
+		vertical-align: middle
+		display: inline
+		z-index: 5
+		
+	.progress
+		position: absolute
+		height: 100%
+		width: 100%
+		z-index: 4
+		left: 0
+		top: 0
+		
+		.bar
+			text-align: right
+			background-color = !very_light_gray
+			border-right = "2px solid " + !light_green
+			height: 100%
 			
 .fileUploadQueueItem-Active
-	+rounded_border
-	font-size: 0.8em
-	background-color: transparent
-	border = !dashed_border
-	margin-top: 0.5em
-	padding: 0.5em
-	width: 100%
+	+queue_item
 	
-	.cancel
-		+float_right
-
-.fileUploadQueueItem-Canceled
-	+rounded_border
-	font-size: 0.8em
-	background-color = !very_light_red
-	border = "1px dashed " + !red
-	margin-top: 0.5em
-	padding: 0.5em
-	width: 100%
-	
-	.fileUploadProgressBar
-		background-color = !light_red
-	
-	.cancel
-		+float_right
-
 .fileUploadQueueItem-Complete
-	+rounded_border
-	font-size: 0.8em
-	background-color: transparent
-	border = "1px dashed " + !green
-	margin-top: 0.5em
-	padding: 0.5em
-	width: 100%
-
-	.cancel
-		+float_right
-					
-.fileUploadProgress
-	background-color: white
-	border = "1px solid " + !gray
-	margin-top: 0.5em
-	width: 100%
-
-.recorded_at
-	margin-top: 0.5em
-	margin-left: 0.5em
-	color = !dark_gray
+	background-color = !very_light_blue
+	+queue_item
 	
-.location
-	margin-left: 0.5em
-	color = !dark_gray
+.fileUploadQueueItem-Canceled
+	+queue_item
 	
-.fileUploadProgressBar
-	background-color = !light_green
+	.progress
+		.bar
+			background-color = !light_red
