--- a/app/views/sounds/uploader.html.haml
+++ b/app/views/sounds/uploader.html.haml
@@ -28,5 +28,5 @@
 		%div#uploader
 			%div#file-uploader-container
 				%div#file-uploader= form.file_field :uploaded_data, :class => 'file'
-			%span#upload-status
+	%div#upload-status
 
